[package]
name = "bcrypt_decoder"
version = "1.0.0-rc3"
authors = ["micheled <me@thisisdurante.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
base64 = "^0.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]
